--- a/techpack/audio/asoc/codecs/tfa9874/Kbuild
+++ b/techpack/audio/asoc/codecs/tfa9874/Kbuild
@@ -39,8 +39,7 @@ TFA_INC := $(AUDIO_ROOT)/asoc/codecs/tfa9874/inc
 # GIT_VERSION=$(shell cd $(PLMA_HOSTSW_DIR); git describe --tags --dirty --match "v[0-9]*.[0-9]*.[0-9]*")
 # EXTRA_CFLAGS += -DTFA98XX_GIT_VERSIONS=\"$(GIT_VERSION)\"
 
-# debugging support (also enables trace_printk)
-EXTRA_CFLAGS += -DDEBUG -DTFA9874_NONDSP_STEREO
+EXTRA_CFLAGS += -DTFA9874_NONDSP_STEREO
 
 EXTRA_CFLAGS += -I$(TFA_INC)
 # EXTRA_CFLAGS += -Werror
