arm64: dts: sm8150: Prevent msm_drm from taking over fmamebuffer
Signed-off-by: Danny Lin <danny@kdrag0n.dev>

--- a/arch/arm64/boot/dts/qcom/sm8150.dtsi
+++ b/arch/arm64/boot/dts/qcom/sm8150.dtsi
@@ -708,7 +708,8 @@
 
 		cont_splash_memory: cont_splash_region {
 			reg = <0x0 0x9c000000 0x0 0x02400000>;
-			label = "cont_splash_region";
+			no-map;
+			label = "not_cont_splash_region";
 		};
 
 		disp_rdump_memory: disp_rdump_region {
