arm64: dts: zs660kl: Bump touchscreen I2C bus clock
This reduces the average time spent in each event reading I2C transfer
from 3-4 ms down to 1-2 ms.

Signed-off-by: Danny Lin <danny@kdrag0n.dev>

--- a/arch/arm64/boot/dts/qcom/sm8150-cdp.dtsi
+++ b/arch/arm64/boot/dts/qcom/sm8150-cdp.dtsi
@@ -319,6 +319,7 @@
 
 &qupv3_se17_i2c {
     status = "ok";
+    qcom,clk-freq-out = <1000000>;
     focaltech@38 {
 		compatible = "focaltech,fts";
 		reg = <0x38>;
